AC_INIT(ishapes, 1.0)
AM_INIT_AUTOMAKE([1.9])

AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_LIBTOOL

AM_CONDITIONAL(BUILD_ACE_FLREACTOR, true)
AM_CONDITIONAL(BUILD_ACE_FOR_TAO, false)
AM_CONDITIONAL(BUILD_ACE_FOXREACTOR, true)
AM_CONDITIONAL(BUILD_ACE_IDL_DEPENDENCIES, true)
AM_CONDITIONAL(BUILD_ACE_INLINE, true)
AM_CONDITIONAL(BUILD_ACE_QTREACTOR, true)
AM_CONDITIONAL(BUILD_ACE_SVCCONF, true)
AM_CONDITIONAL(BUILD_ACE_SVCCONF_GEN, false)
AM_CONDITIONAL(BUILD_ACE_TKREACTOR, true)
AM_CONDITIONAL(BUILD_ACE_TOKEN, true)
AM_CONDITIONAL(BUILD_ACE_XTREACTOR, true)
AM_CONDITIONAL(BUILD_ACEXML, true)
AM_CONDITIONAL(BUILD_ATHENA, false)
AM_CONDITIONAL(BUILD_BOOST, true)
AM_CONDITIONAL(BUILD_BZIP2, false)
AM_CONDITIONAL(BUILD_CCM_DIRECT_COLLOCATION, false)
AM_CONDITIONAL(BUILD_CCM_LW, true)
AM_CONDITIONAL(BUILD_CCM_NOEVENT, false)
AM_CONDITIONAL(BUILD_CORBA_E_COMPACT, false)
AM_CONDITIONAL(BUILD_CORBA_E_MICRO, false)
AM_CONDITIONAL(BUILD_COREDX, false)
AM_CONDITIONAL(BUILD_CROSS_COMPILE, false)
AM_CONDITIONAL(BUILD_DDS4CCM_COREDX, false)
AM_CONDITIONAL(BUILD_DDS4CCM_NDDS, false)
AM_CONDITIONAL(BUILD_DDS4CCM_OPENDDS, false)
AM_CONDITIONAL(BUILD_DDS4CCM_SPLICE, false)
AM_CONDITIONAL(BUILD_DDS_SUPPRESS_ANYS, true)
AM_CONDITIONAL(BUILD_DUMMY_LABEL, false)
AM_CONDITIONAL(BUILD_EXCLUDE_INET, false)
AM_CONDITIONAL(BUILD_FL, false)
AM_CONDITIONAL(BUILD_FOX, false)
AM_CONDITIONAL(BUILD_GEN_OSTREAM, false)
AM_CONDITIONAL(BUILD_GL, true)
AM_CONDITIONAL(BUILD_INET_SSL, false)
AM_CONDITIONAL(BUILD_INTERCEPTORS, true)
AM_CONDITIONAL(BUILD_IPV6, false)
AM_CONDITIONAL(BUILD_JAVA, false)
AM_CONDITIONAL(BUILD_LINK_CODECFACTORY, false)
AM_CONDITIONAL(BUILD_LZO1, false)
AM_CONDITIONAL(BUILD_LZO2, false)
AM_CONDITIONAL(BUILD_MCPP, false)
AM_CONDITIONAL(BUILD_MFC, false)
AM_CONDITIONAL(BUILD_MINIMUM_CORBA, false)
AM_CONDITIONAL(BUILD_MOTIF, false)
AM_CONDITIONAL(BUILD_NDDS, false)
AM_CONDITIONAL(BUILD_NDDSMONITOR, false)
AM_CONDITIONAL(BUILD_NEGOTIATE_CODESETS, false)
AM_CONDITIONAL(BUILD_NO_CXX11, true)
AM_CONDITIONAL(BUILD_NO_OPENDDS_SAFETY_PROFILE, true)
AM_CONDITIONAL(BUILD_NOTIFY_MONITOR_CONTROL, false)
AM_CONDITIONAL(BUILD_OFCCM, false)
AM_CONDITIONAL(BUILD_OLD_STDSTREAM, false)
AM_CONDITIONAL(BUILD_OPENMP, false)
AM_CONDITIONAL(BUILD_OPTIMIZE_COLLOCATED_INVOCATIONS, true)
AM_CONDITIONAL(BUILD_QOS, false)
AM_CONDITIONAL(BUILD_QT, false)
AM_CONDITIONAL(BUILD_QT3, false)
AM_CONDITIONAL(BUILD_QT4, true)
AM_CONDITIONAL(BUILD_RAPI, false)
AM_CONDITIONAL(BUILD_REPO, false)
AM_CONDITIONAL(BUILD_RPC, false)
AM_CONDITIONAL(BUILD_SCTP, false)
AM_CONDITIONAL(BUILD_SSL, false)
AM_CONDITIONAL(BUILD_STATIC_LIBS_ONLY, false)
AM_CONDITIONAL(BUILD_STL, false)
AM_CONDITIONAL(BUILD_TAO_FLRESOURCE, true)
AM_CONDITIONAL(BUILD_TAO_FOXRESOURCE, true)
AM_CONDITIONAL(BUILD_TAO_IDL_FE_GEN, false)
AM_CONDITIONAL(BUILD_TAO_NO_IIOP, false)
AM_CONDITIONAL(BUILD_TAO_QTRESOURCE, true)
AM_CONDITIONAL(BUILD_TAO_TKRESOURCE, true)
AM_CONDITIONAL(BUILD_TAO_XTRESOURCE, true)
AM_CONDITIONAL(BUILD_THREADS, true)
AM_CONDITIONAL(BUILD_TK, false)
AM_CONDITIONAL(BUILD_USES_WCHAR, false)
AM_CONDITIONAL(BUILD_VALUETYPE_OUT_INDIRECTION, true)
AM_CONDITIONAL(BUILD_VC8_AVOID_DOMINANCE_WARNINGS, true)
AM_CONDITIONAL(BUILD_VC8_AVOID_UNIMPL_EXCEPTION_SPEC_WARNINGS, true)
AM_CONDITIONAL(BUILD_VC_AVOID_CRT_SECURE_WARNINGS, true)
AM_CONDITIONAL(BUILD_VC_AVOID_NAME_LEN_EXCEEDED_WARNINGS, true)
AM_CONDITIONAL(BUILD_VC_AVOID_SCL_SECURE_WARNINGS, true)
AM_CONDITIONAL(BUILD_VC_AVOID_THIS_IN_INITIALIZER_WARNINGS, true)
AM_CONDITIONAL(BUILD_VCL, false)
AM_CONDITIONAL(BUILD_VERSIONED_NAMESPACE, false)
AM_CONDITIONAL(BUILD_WINCE, false)
AM_CONDITIONAL(BUILD_WIRESHARK, false)
AM_CONDITIONAL(BUILD_WXWINDOWS, false)
AM_CONDITIONAL(BUILD_X11, true)
AM_CONDITIONAL(BUILD_XERCES, false)
AM_CONDITIONAL(BUILD_XERCES2, false)
AM_CONDITIONAL(BUILD_XERCES3, false)
AM_CONDITIONAL(BUILD_XSC, false)
AM_CONDITIONAL(BUILD_XT, false)
AM_CONDITIONAL(BUILD_ZIP_WRAPPER, false)
AM_CONDITIONAL(BUILD_ZIPARCHIVE, false)
AM_CONDITIONAL(BUILD_ZLIB, false)
AM_CONDITIONAL(BUILD_ZZIP, false)

m4_include([configure.ac.Makefiles])

AC_OUTPUT
